# jotainchatttttttt

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: 2026-07-14-design.md  2026-07-14-resume-qa-checklist.md  2026-07-14-resume-transfer-design.md  ARCHIVE-v1-handoff.md  QA-checklist.md  QA-dual-mac-smoke.md  diagnostics.md  group-chat.md  setup-macos.md  windows-cross-lan.md
scripts/: package-macos.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  diagnostics.rs  discovery.rs  fsutil.rs  lib.rs  main.rs  sound.rs  state.rs
src-tauri/src/net/: frame.rs  group.rs  mod.rs  protocol.rs  session.rs  transfer.rs
