[package]
name = "jotainchatttttttt"
version = "0.2.0-cross-lan"
description = "LAN chat and file transfer for macOS and Windows"
authors = ["jotain"]
edition = "2021"

[lib]
name = "jotainchatttttttt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
rfd = "0.15"
rand = "0.8"
base64 = "0.22"
